--- a/CustomerOrderManagement/Views/Product/Edit.cshtml
+++ b/CustomerOrderManagement/Views/Product/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@model CustomerOrderManagement.Models.ViewModels.Products.ProductEditViewModel
-<h1>Product Create</h1>
+<h1>Product Edit</h1>
 
 <form method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
